<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/navigation_dashboard">

    <fragment
        android:id="@+id/navigation_dashboard"
        android:name="com.example.gestion_salle_de_jeux.ui.dashboard.DashboardFragment"
        android:label="@string/title_dashboard"
        tools:layout="@layout/fragment_dashboard" />

    <fragment
        android:id="@+id/navigation_history"
        android:name="com.example.gestion_salle_de_jeux.ui.history.HistoryFragment"
        android:label="@string/title_history"
        tools:layout="@layout/fragment_history" />

    <fragment
        android:id="@+id/navigation_game_room"
        android:name="com.example.gestion_salle_de_jeux.ui.GameRoomFragment.GameRoomFragment"
        android:label="@string/title_game_room"
        tools:layout="@layout/fragment_gameroom" />

    <fragment
        android:id="@+id/navigation_finance"
        android:name="com.example.gestion_salle_de_jeux.ui.finance.FinanceFragment"
        android:label="@string/title_finance"
        tools:layout="@layout/fragment_finance" />

    <fragment
        android:id="@+id/navigation_materiel"
        android:name="com.example.gestion_salle_de_jeux.ui.materiel.MaterielFragment"
        android:label="@string/title_materiel"
        tools:layout="@layout/fragment_materiel" />
</navigation>